examples/test/testpolicy12435.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12435
  namespace: namespace272
spec:
  podSelector:
    matchLabels:
      key48: value33
      key42: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value32
      podSelector:
        matchLabels:
          key41: value28
          key16: value49
